* getcwd.c: Include string.h, stdlib.h for prototypes
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35273 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,9 +1,11 @@
 2000-07-27  RodneyBrown  <RodneyBrown@pmsc.com>
 	    Jeff Law <law@cygnus.com>
 
+	* getcwd.c: Include string.h, stdlib.h for prototypes
+
 	* Makefile.in (rename.o, waitpid.o): Depend on config.h
-	* rename.c: include config.h, unistd.h
-	* waitpid.c: include config.h, sys/wait.h
+	* rename.c: Include config.h, unistd.h
+	* waitpid.c: Include config.h, sys/wait.h
 
 2000-07-21  Alex Samuel  <samuel@codesourcery.com>
 
