* gcc.c-tortuer/execute/20000726-1.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35279 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jul 26 19:41:51 2000  Hans-Peter Nilsson  <hp@axis.com>
+
+	* gcc.c-tortuer/execute/20000726-1.c: New test.
+
 2000-07-26  Alexandre Oliva  <aoliva@redhat.com>
 
 	* gcc.c-torture/execute/enum-2.c: New test.
