* pexecute.c (pexecute) [__MSDOS__]: Change __GO32__ to         __DJGPP__. Use P_WAIT instead of constant in the spawnv* call.         Cast program to 'char *' in errmsg_arg assignment.         (PWAIT_ERROR): Define.         (pwait): Use PWAIT_ERROR.  Adjust DJGPP's status code to conform         to DJGPP's WIF* macros.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35281 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libiberty/ChangeLog
+++ b/libiberty/ChangeLog
@@ -1,3 +1,12 @@
+2000-07-26 Mark Elbrecht <snowball3@bigfoot.com>
+
+	* pexecute.c (pexecute) [__MSDOS__]: Change __GO32__ to
+	__DJGPP__. Use P_WAIT instead of constant in the spawnv* call.
+	Cast program to 'char *' in errmsg_arg assignment.
+	(PWAIT_ERROR): Define.
+	(pwait): Use PWAIT_ERROR.  Adjust DJGPP's status code to conform
+	to DJGPP's WIF* macros.
+
 2000-07-27  RodneyBrown  <RodneyBrown@pmsc.com>
 	    Jeff Law <law@cygnus.com>
 
