--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,6 +1,20 @@
 2000-07-25  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
+	* parse.y (jdep_resolve_class): Don't bother checking potential
+	innerclass access if `decl' is NULL.
+	(find_in_imports_on_demand): TREE_PURPOSE of `import' contains the
+	WFL.
+
+2000-07-25  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
 	* parse.c: Remove (again.)
+
+2000-07-24  Alexandre Petit-Bianco  <apbianco@cygnus.com>
+
+	* parse.y (find_as_inner_class): Removed 2000-07-19 patches.
+	* jcf-parse.c (HANDLE_INNERCLASSES_ATTRIBUTE): Local `decl' moved
+	outside the `if' statement, alias to innerclass removed, `decl'
+	used to mark the class complete.
 
 2000-07-21  Alexandre Petit-Bianco  <apbianco@cygnus.com>
 
