* pa/x-pa-hpux: Add -D_HIUX_SOURCE to FIXPROTO_DEFINES         for HI-UX/WE2 systems.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35289 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jul 27 09:25:17 2000  Akiko Matsushita  <matusita@sra.co.jp>
+
+	* pa/x-pa-hpux: Add -D_HIUX_SOURCE to FIXPROTO_DEFINES
+	for HI-UX/WE2 systems.
+	
 2000-07-24  Bruce Korb  <bkorb@gnu.org>
 
 	* fixincl/fixfixes.c(emit_gnu_type): rewrote to *rely* on GCC
