* c-parse.in (string): For -Wtraditional, warn about string 	concatenation only once per line.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35290 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-27  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* c-parse.in (string): For -Wtraditional, warn about string
+	concatenation only once per line.
+
 Thu Jul 27 09:25:17 2000  Akiko Matsushita  <matusita@sra.co.jp>
 
 	* pa/x-pa-hpux: Add -D_HIUX_SOURCE to FIXPROTO_DEFINES
