* gcc.dg/c90-impl-int-2.c, gcc.dg/c99-impl-int-2.c: New tests.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35291 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-25  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.dg/c90-impl-int-2.c, gcc.dg/c99-impl-int-2.c: New tests.
+
 Wed Jul 26 19:41:51 2000  Hans-Peter Nilsson  <hp@axis.com>
 
 	* gcc.c-tortuer/execute/20000726-1.c: New test.
