* java/awt/geom/RectangularShape.java (getPathIterator): 	Wrote.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35295 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-22  Tom Tromey  <tromey@cygnus.com>
+
+	* java/awt/geom/RectangularShape.java (getPathIterator):
+	Wrote.
+
 2000-07-23  Rolf W. Rasmussen  <rolfwr@ii.uib.no>
 
 	* libjava/java/awt/image/ColorModel.java: New file, replaces the
