* dwarf2out.c (gen_typedef_die): Abort if we get identical         TREE_TYPE and DECL_ORIGINAL_TYPE on a typedef.
        * typeck.c (common_type): If we're just returning one of our
        arguments, don't strip typedef types.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35297 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-27  Jason Merrill  <jason@redhat.com>
+
+	* dwarf2out.c (gen_typedef_die): Abort if we get identical
+	TREE_TYPE and DECL_ORIGINAL_TYPE on a typedef.
+
 2000-07-27  RodneyBrown  <RodneyBrown@pmsc.com>
 
 	* expr.h (get_alias_set, lang_get_alias_set): Delete prototypes.
