* gcc.dg/c99-main-1.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35299 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-27  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* gcc.dg/c99-main-1.c: New test.
+
 2000-07-25  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.dg/c90-impl-int-2.c, gcc.dg/c99-impl-int-2.c: New tests.
