--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -10,6 +10,10 @@
 
 2000-07-27  Joseph S. Myers  <jsm28@cam.ac.uk>
 
+	* c-decl.c (finish_function): Don't treat 'main' specially unless
+	flag_hosted.  In C99 mode, return 0 from 'main' unless
+	DEFAULT_MAIN_RETURN is otherwise defined.
+
 	* c-decl.c (store_parm_decls): In C99 mode, pedwarn for function
 	parameters defaulting to int in an old-style function definition.
 
