* Makefile.in (bootstrap): Move -BstageN/ back to the beginning.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35305 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-27  Alexandre Oliva  <aoliva@redhat.com>
+
+	* Makefile.in (bootstrap): Move -BstageN/ back to the beginning.
+
 2000-07-27  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	* gcc.c (struct prefix_list): Add member priority.
