--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2000-07-27  Alexandre Oliva  <aoliva@redhat.com>
 
+	* Makefile.in (clean-target-libgcc): Remove gcc/libgcc.
+	(clean-target): Depend on it.
+
 	* Makefile.in (FLAGS_FOR_TARGET): New macro.
 	(GCC_FOR_TARGET): Use it.
 	(CC_FOR_TARGET, CXX_FOR_TARGET, CHILL_FOR_TARGET): Now defined...
