--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-27  Tom Tromey  <tromey@cygnus.com>
+
+	* java/io/OutputStreamWriter.java (close): Only flush if not
+	closed.
+
 2000-07-27  Warren Levy  <warrenl@cygnus.com>
 
 	* mauve-libgcj: Activated serialization tests.
