--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-07-27  Jim Wilson  <wilson@cygnus.com>
+
+	* dwarf2out.c (gen_decl_die): Don't call gen_abstract_function if
+	DECL_INITIAL (decl) == NULL_TREE.
+
 2000-07-27  Alexandre Oliva  <aoliva@redhat.com>
 
 	* Makefile.in (INSN_ATTR_H): New macro.  Replace all dependencies
