--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-28  Warren Levy  <warrenl@cygnus.com>
+
+	* java/io/ObjectStreamException.java: Made constructors protected.
+
 2000-07-27  Tom Tromey  <tromey@cygnus.com>
 
 	* java/io/OutputStreamWriter.java (close): Only flush if not
