2000-07-26  Andrew Haley  <aph@cygnus.com>
        * interpret.cc (continue1): Insert missing break into switch.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35316 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-26  Andrew Haley  <aph@cygnus.com>
+
+	* interpret.cc (continue1): Insert missing break into switch.
+
 2000-07-28  Warren Levy  <warrenl@cygnus.com>
 
 	* java/io/ObjectStreamException.java: Made constructors protected.
