2000-07-28  Philipp Thomas  <pthomas@suse.de>
	* install.texi (--enable-nls): Change the description of the NLS
	related configure options to match the current state.
	(--with-included-gettext): Likewise.
	(--enable-maintainer-mode): New description added.
	* extend.texi (-fstrict-prototype): Add missing '.'.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35317 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2000-07-28  Philipp Thomas  <pthomas@suse.de>
+
+	* install.texi (--enable-nls): Change the description of the NLS
+	related configure options to match the current state.
+	(--with-included-gettext): Likewise.
+	(--enable-maintainer-mode): New description added.
+	* extend.texi (-fstrict-prototype): Add missing '.'.
+	
 2000-07-27  Jim Wilson  <wilson@cygnus.com>
 
 	* dwarf2out.c (gen_decl_die): Don't call gen_abstract_function if
