--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,52 @@
+2000-07-28  Richard Henderson  <rth@cygnus.com>
+
+	* emit-rtl.c (gen_lowpart_common): Add missing 'c' variable.
+
+2000-07-28  Bernd Schmidt  <bernds@cygnus.co.uk>
+
+	* cse.c (canon_hash): Handle PRE_MODIFY/POST_MODIFY.
+	(cse_insn): Likewise.
+	(addr_affects_sp_p): Likewise.
+	* expr.c (move_by_pieces): Likewise.
+	(clear_by_pieces): Likewise.
+	* gcse.c (oprs_unchanged_p): Likewise.
+	* haifa-sched.c (sched_analyze_2): Likewise.
+	* recog.c (offsettable_address_p): Likewise.
+	* regclass.c (record_address_regs): Likewise.
+	* reload.c (find_reusable_reload): Likewise.
+	(push_reload): Likewise.
+	(operands_match_p): Likewise.
+	(decompose): Likewise.
+	(find_reloads_address_1): Likewise.
+	(find_inc_amount): Likewise.
+	* reload1.c (elimination_effects): Likewise.
+	* resource.c (mark_set_resources): Likewise.
+	* flow.c (attempt_auto_inc): New function; mostly broken out
+	of find_auto_inc.
+	(find_auto_inc): Split into two functions and enhanced to
+	generate POST_MODIFY.
+	* rtl.def (PRE_MODIFY, POST_MODIFY): Adjust comment.
+	* rtl.h (count_all_occurrences):  Declare.
+	(HAVE_{PRE,POST}_MODIFY_{DISP,REG}): Provide default of 0 if not
+	defined.
+	* rtlanal.c (count_all_occurrences): New function.
+	* tm.texi (HAVE_POST_MODIFY_DISP, HAVE_PRE_MODIFY_DISP,
+	HAVE_POST_MODIFY_REG, HAVE_PRE_MODIFY_REG): Document.
+
+	* config/ia64/ia64-protos.h (destination_operand): Declare.
+	* config/ia64/ia64.c (destination_operand): New function.
+	(ia64_print_operand): Handle POST_MODIFY.
+	(rtx_needs_barrier): Likewise.
+	* config/ia64/ia64.h (HAVE_POST_MODIFY_DISP): Define to 1.
+	(HAVE_POST_MODIFY_REG): Define to 1.
+	(MAX_REGS_PER_ADDRESS): Change to 2.
+	(GO_IF_LEGITIMATE_ADDRESS): Accept POST_MODIFY too.
+	(LEGITIMATE_ADDRESS_REG): New helper macro.
+	(LEGITIMATE_ADDRESS_DISP): Likewise.
+	(PREDICATE_CODES): Add entry for destination_operand.
+	* config/ia64/ia64.md (all mov patterns): Use destination_operand
+	predicate for operand 0.
+
 2000-07-28  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* dwarf2out.c: Indent #error directive.
@@ -311,8 +360,8 @@ Mon Jul 24 02:04:52 2000  Jeffrey A Law  (law@cygnus.com)
 
 Sun Jul 23 14:49:12 2000  Jason Eckhardt  <jle@cygnus.com> 
 
-        * config/i860/i860.md (untyped_call expander): Use GEN_CALL 
-        instead of gen_call.
+	* config/i860/i860.md (untyped_call expander): Use GEN_CALL 
+	instead of gen_call.
 
 Sun Jul 23 11:52:03 2000  George Helffrich (george@gly.bris.ac.uk)
 
