--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -201,8 +201,8 @@
    (set_attr "predicable" "no")])
 
 (define_insn "*movqi_internal_astep"
-  [(set (match_operand:QI 0 "nonimmediate_operand" "=r,r,r, m, r,*f,*f")
-	(match_operand:QI 1 "move_operand"         "rO,J,m,rO,*f,rO,*f"))]
+  [(set (match_operand:QI 0 "destination_operand" "=r,r,r, m, r,*f,*f")
+	(match_operand:QI 1 "move_operand"        "rO,J,m,rO,*f,rO,*f"))]
   "TARGET_A_STEP && ia64_move_ok (operands[0], operands[1])"
   "@
    mov %0 = %r1
@@ -216,8 +216,8 @@
    (set_attr "predicable" "no")])
 
 (define_insn "*movqi_internal"
-  [(set (match_operand:QI 0 "nonimmediate_operand" "=r,r,r, m, r,*f,*f")
-	(match_operand:QI 1 "move_operand"         "rO,J,m,rO,*f,rO,*f"))]
+  [(set (match_operand:QI 0 "destination_operand" "=r,r,r, m, r,*f,*f")
+	(match_operand:QI 1 "move_operand"        "rO,J,m,rO,*f,rO,*f"))]
   "! TARGET_A_STEP && ia64_move_ok (operands[0], operands[1])"
   "@
    mov %0 = %r1
@@ -259,8 +259,8 @@
    (set_attr "predicable" "no")])
 
 (define_insn "*movhi_internal_astep"
-  [(set (match_operand:HI 0 "nonimmediate_operand" "=r,r,r, m, r,*f,*f")
-	(match_operand:HI 1 "move_operand"         "rO,J,m,rO,*f,rO,*f"))]
+  [(set (match_operand:HI 0 "destination_operand" "=r,r,r, m, r,*f,*f")
+	(match_operand:HI 1 "move_operand"        "rO,J,m,rO,*f,rO,*f"))]
   "TARGET_A_STEP && ia64_move_ok (operands[0], operands[1])"
   "@
    mov %0 = %r1
@@ -274,8 +274,8 @@
    (set_attr "predicable" "no")])
 
 (define_insn "*movhi_internal"
-  [(set (match_operand:HI 0 "nonimmediate_operand" "=r,r,r, m, r,*f,*f")
-	(match_operand:HI 1 "move_operand"         "rO,J,m,rO,*f,rO,*f"))]
+  [(set (match_operand:HI 0 "destination_operand" "=r,r,r, m, r,*f,*f")
+	(match_operand:HI 1 "move_operand"        "rO,J,m,rO,*f,rO,*f"))]
   "! TARGET_A_STEP && ia64_move_ok (operands[0], operands[1])"
   "@
    mov %0 = %r1
@@ -318,8 +318,8 @@
    (set_attr "predicable" "no")])
 
 (define_insn "*movsi_internal_astep"
-  [(set (match_operand:SI 0 "nonimmediate_operand" "=r,r,r,r, m, r,*f,*f")
-	(match_operand:SI 1 "move_operand"         "rO,J,i,m,rO,*f,rO,*f"))]
+  [(set (match_operand:SI 0 "destination_operand" "=r,r,r,r, m, r,*f,*f")
+	(match_operand:SI 1 "move_operand"        "rO,J,i,m,rO,*f,rO,*f"))]
   "TARGET_A_STEP && ia64_move_ok (operands[0], operands[1])"
   "@
   mov %0 = %r1
@@ -334,8 +334,8 @@
    (set_attr "predicable" "no")])
 
 (define_insn "*movsi_internal"
-  [(set (match_operand:SI 0 "nonimmediate_operand" "=r,r,r,r, m, r,*f,*f")
-	(match_operand:SI 1 "move_operand"         "rO,J,i,m,rO,*f,rO,*f"))]
+  [(set (match_operand:SI 0 "destination_operand" "=r,r,r,r, m, r,*f,*f")
+	(match_operand:SI 1 "move_operand"        "rO,J,i,m,rO,*f,rO,*f"))]
   "! TARGET_A_STEP && ia64_move_ok (operands[0], operands[1])"
   "@
   mov %0 = %r1
@@ -407,8 +407,10 @@
    (set_attr "predicable" "no")])
 
 (define_insn "*movdi_internal_astep"
-  [(set (match_operand:DI 0 "nonimmediate_operand" "=r,r,r,r, m,r,*f,*f,*f,Q, r,*b")
-	(match_operand:DI 1 "move_operand"         "rO,J,i,m,rO,*f,rO,*f,Q,*f,*b,rO"))]
+  [(set (match_operand:DI 0 "destination_operand"
+			    "=r,r,r,r, m, r,*f,*f,*f, Q, r,*b")
+	(match_operand:DI 1 "move_operand"
+			    "rO,J,i,m,rO,*f,rO,*f, Q,*f,*b,rO"))]
   "TARGET_A_STEP && ia64_move_ok (operands[0], operands[1])"
   "*
 {
@@ -437,8 +439,10 @@
    (set_attr "predicable" "no")])
 
 (define_insn "*movdi_internal"
-  [(set (match_operand:DI 0 "nonimmediate_operand" "=r,r,r,r, m,r,*f,*f,*f,Q, r,*b")
-	(match_operand:DI 1 "move_operand"         "rO,J,i,m,rO,*f,rO,*f,Q,*f,*b,rO"))]
+  [(set (match_operand:DI 0 "destination_operand"
+			    "=r,r,r,r, m, r,*f,*f,*f, Q, r,*b")
+	(match_operand:DI 1 "move_operand"
+			    "rO,J,i,m,rO,*f,rO,*f, Q,*f,*b,rO"))]
   "! TARGET_A_STEP && ia64_move_ok (operands[0], operands[1])"
   "*
 {
@@ -573,8 +577,8 @@
    (set_attr "predicable" "no")])
 
 (define_insn "*movsf_internal_astep"
-  [(set (match_operand:SF 0 "nonimmediate_operand" "=f,f, Q,*r, f,*r,*r, m")
-	(match_operand:SF 1 "general_operand"      "fG,Q,fG,fG,*r,*r, m,*r"))]
+  [(set (match_operand:SF 0 "destination_operand" "=f,f, Q,*r, f,*r,*r, m")
+	(match_operand:SF 1 "general_operand"     "fG,Q,fG,fG,*r,*r, m,*r"))]
   "TARGET_A_STEP && ia64_move_ok (operands[0], operands[1])"
   "@
   mov %0 = %F1
@@ -589,8 +593,8 @@
    (set_attr "predicable" "no")])
 
 (define_insn "*movsf_internal"
-  [(set (match_operand:SF 0 "nonimmediate_operand" "=f,f, Q,*r, f,*r,*r, m")
-	(match_operand:SF 1 "general_operand"      "fG,Q,fG,fG,*r,*r, m,*r"))]
+  [(set (match_operand:SF 0 "destination_operand" "=f,f, Q,*r, f,*r,*r, m")
+	(match_operand:SF 1 "general_operand"     "fG,Q,fG,fG,*r,*r, m,*r"))]
   "! TARGET_A_STEP && ia64_move_ok (operands[0], operands[1])"
   "@
   mov %0 = %F1
@@ -632,8 +636,8 @@
    (set_attr "predicable" "no")])
 
 (define_insn "*movdf_internal_astep"
-  [(set (match_operand:DF 0 "nonimmediate_operand" "=f,f, Q,*r, f,*r,*r, m")
-	(match_operand:DF 1 "general_operand"      "fG,Q,fG,fG,*r,*r, m,*r"))]
+  [(set (match_operand:DF 0 "destination_operand" "=f,f, Q,*r, f,*r,*r, m")
+	(match_operand:DF 1 "general_operand"     "fG,Q,fG,fG,*r,*r, m,*r"))]
   "TARGET_A_STEP && ia64_move_ok (operands[0], operands[1])"
   "@
   mov %0 = %F1
@@ -648,8 +652,8 @@
    (set_attr "predicable" "no")])
 
 (define_insn "*movdf_internal"
-  [(set (match_operand:DF 0 "nonimmediate_operand" "=f,f, Q,*r, f,*r,*r, m")
-	(match_operand:DF 1 "general_operand"      "fG,Q,fG,fG,*r,*r, m,*r"))]
+  [(set (match_operand:DF 0 "destination_operand" "=f,f, Q,*r, f,*r,*r, m")
+	(match_operand:DF 1 "general_operand"     "fG,Q,fG,fG,*r,*r, m,*r"))]
   "! TARGET_A_STEP && ia64_move_ok (operands[0], operands[1])"
   "@
   mov %0 = %F1
@@ -689,8 +693,8 @@
    (set_attr "predicable" "no")])
 
 (define_insn "*movxf_internal_astep"
-  [(set (match_operand:XF 0 "nonimmediate_operand" "=f,f, m")
-	(match_operand:XF 1 "general_operand"      "fG,m,fG"))]
+  [(set (match_operand:XF 0 "destination_operand" "=f,f, m")
+	(match_operand:XF 1 "general_operand"     "fG,m,fG"))]
   "TARGET_A_STEP && ia64_move_ok (operands[0], operands[1])"
   "@
   mov %0 = %F1
@@ -700,8 +704,8 @@
    (set_attr "predicable" "no")])
 
 (define_insn "*movxf_internal"
-  [(set (match_operand:XF 0 "nonimmediate_operand" "=f,f, m")
-	(match_operand:XF 1 "general_operand"      "fG,m,fG"))]
+  [(set (match_operand:XF 0 "destination_operand" "=f,f, m")
+	(match_operand:XF 1 "general_operand"     "fG,m,fG"))]
   "! TARGET_A_STEP && ia64_move_ok (operands[0], operands[1])"
   "@
   mov %0 = %F1
