--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2000-07-28  Richard Henderson  <rth@cygnus.com>
 
+	* config/ia64/ia64.c (ia64_print_operand): Fix typos.
+	Sign extend mode size before negating.
+
+2000-07-28  Richard Henderson  <rth@cygnus.com>
+
 	* emit-rtl.c (gen_lowpart_common): Add missing 'c' variable.
 
 2000-07-28  Bernd Schmidt  <bernds@cygnus.co.uk>
