--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2000-07-29  Andreas Jaeger  <aj@suse.de>
+
+	* configure.in (mips*-*-linux*): Use mips*el to check for little
+	endian MIPS, add tmake_file.
+
+	* config/mips/linux.h (TARGET_VERSION): Use GNU/Linux.
+	(SUBTARGET_CPP_SPEC): Default MIPS_ISA is 1.
+	Patches by Maciej W. Rozycki <macro@ds2.pg.gda.pl>.
+
 2000-07-28  Richard Henderson  <rth@cygnus.com>
 
 	* config/ia64/ia64.c (ia64_print_operand): Fix typos.
