* config/c4x/libgcc.S: (divqf3): Improve accuracy.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35335 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-07-30  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
+
+	* config/c4x/libgcc.S: (divqf3): Improve accuracy.
+
 2000-07-27  Mark Mitchell  <mark@codesourcery.com>
 
 	Put phi nodes after NOTE_INSN_BASIC_BLOCK.
