* config/c4x/c4x.h (IS_XXX_REGNO): Rewrite to avoid unsigned warnings.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35336 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,6 +1,10 @@
 2000-07-30  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
 
-	* config/c4x/libgcc.S: (divqf3): Improve accuracy.
+	* config/c4x/c4x.h (IS_XXX_REGNO): Rewrite to avoid unsigned warnings.
+
+2000-07-30  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
+
+	* config/c4x/libgcc.S (divqf3): Improve accuracy.
 
 2000-07-27  Mark Mitchell  <mark@codesourcery.com>
 
