* config/c4x/c4x.c (c4x_rptb_insert): Make more robust.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@35338 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2000-07-30  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
-	
+
+	* config/c4x/c4x.c (c4x_rptb_insert): Make more robust.
+
+2000-07-30  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
+
 	* config/c4x/c4x.h (ASM_FORMAT_PRIVATE_NAME): Output $ in label.
 
 2000-07-30  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>
