--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+Sun Jul 30 20:08:37 MET DST 2000  Jan Hubicka  <jh@suse.cz>
+
+	* simplify-rtx.c (simplify_relational_operation): Verify that mode ==
+	VOIDmode implies both operands to be VOIDmode.
+	(simplify_ternary_operation): Compute properly the mode of comparison.
+	* combine.c (combine_simplify_rtx): Likewise.
+
 2000-07-25  Michael Hayes  <mph@paradise.net.nz>
 
 	* basic-block.h (struct loops): New field rc_order.
