--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Sun Jul 30 20:27:36 MET DST 2000  Jan Hubicka  <jh@suse.cz>
+
+	* combine.c (record_promoted_value):  Allow bitsize of mode
+	to be equivalent to HOST_BITS_PER_WISE_INT.
+
 Sun Jul 30 20:25:21 MET DST 2000  Jan Hubicka  <jh@suse.cz>
 
 	* function.c (assign_stack_local_1, assign_stack_temp_for_type): 
